<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_height="512dp"
    tools:layout_width="512dp"
    android:padding="32dp"
    android:clipToPadding="false"
    android:layout_gravity="center"
    android:background="@drawable/compass_bg"
    android:backgroundTint="?colorSurface">

    <ImageView
        android:id="@+id/inner_indicator_bg"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_star_shape"
        app:tint="?colorPrimaryContainer"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintDimensionRatio="1:1"
        />

    <TextView
        android:id="@+id/degree_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/compass_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.29"
        android:backgroundTint="?colorPrimary"
        tools:text=" 296°"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="?colorOnPrimary"
        android:autoSizeTextType="uniform"
        android:padding="20dp"
        />

    <TextView
        android:id="@+id/north"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/inner_indicator_bg"
        app:layout_constraintBottom_toTopOf="@id/degree_indicator"
        app:layout_constraintStart_toStartOf="@id/inner_indicator_bg"
        app:layout_constraintEnd_toEndOf="@id/inner_indicator_bg"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.16"
        android:lineSpacingExtra="0dp"
        android:background="@drawable/compass_bg"
        android:text="@string/north"
        android:gravity="center"
        android:includeFontPadding="false"
        android:backgroundTint="?colorTertiary"
        android:textColor="?colorOnTertiary"
        android:autoSizeTextType="uniform"
        android:padding="11dp"
        />

    <TextView
        android:id="@+id/south"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/degree_indicator"
        app:layout_constraintBottom_toBottomOf="@id/inner_indicator_bg"
        app:layout_constraintStart_toStartOf="@id/inner_indicator_bg"
        app:layout_constraintEnd_toEndOf="@id/inner_indicator_bg"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.16"
        android:lineSpacingExtra="0dp"
        android:text="@string/south"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="?colorOnPrimaryContainer"
        android:autoSizeTextType="uniform"
        android:padding="11dp"
        />

    <TextView
        android:id="@+id/west"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/inner_indicator_bg"
        app:layout_constraintBottom_toBottomOf="@id/inner_indicator_bg"
        app:layout_constraintStart_toStartOf="@id/inner_indicator_bg"
        app:layout_constraintEnd_toStartOf="@id/degree_indicator"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.16"
        android:lineSpacingExtra="0dp"
        android:text="@string/west"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="?colorOnPrimaryContainer"
        android:autoSizeTextType="uniform"
        android:padding="11dp"
        />

    <TextView
        android:id="@+id/east"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/inner_indicator_bg"
        app:layout_constraintBottom_toBottomOf="@id/inner_indicator_bg"
        app:layout_constraintStart_toEndOf="@id/inner_indicator_bg"
        app:layout_constraintEnd_toEndOf="@id/degree_indicator"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.16"
        android:lineSpacingExtra="0dp"
        android:text="@string/east"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="?colorOnPrimaryContainer"
        android:autoSizeTextType="uniform"
        android:padding="11dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0670"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9330"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0670"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9330"
        />

    <TextView
        android:id="@+id/direction_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        style="@style/CompassTextAppearance"
        />

    <TextView
        android:id="@+id/direction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_2"
        style="@style/CompassTextAppearance"
        app:layout_constraintStart_toStartOf="@id/guideline_v_3"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_3"
        app:layout_constraintTop_toTopOf="@id/guideline_h_1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_1"
        />

    <TextView
        android:id="@+id/direction_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_3"
        style="@style/CompassTextAppearance"
        app:layout_constraintStart_toStartOf="@id/guideline_v_4"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_4"
        app:layout_constraintTop_toTopOf="@id/guideline_h_2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_2"
        />

    <TextView
        android:id="@+id/direction_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_4"
        style="@style/CompassTextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        />

    <TextView
        android:id="@+id/direction_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_5"
        style="@style/CompassTextAppearance"
        app:layout_constraintTop_toTopOf="@id/guideline_h_3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_3"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_4"
        app:layout_constraintStart_toStartOf="@id/guideline_v_4"
        />

    <TextView
        android:id="@+id/direction_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_6"
        style="@style/CompassTextAppearance"
        app:layout_constraintTop_toTopOf="@id/guideline_h_4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_4"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_3"
        app:layout_constraintStart_toStartOf="@id/guideline_v_3"
        />

    <TextView
        android:id="@+id/direction_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        style="@style/CompassTextAppearance"
        />

    <TextView
        android:id="@+id/direction_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_8"
        style="@style/CompassTextAppearance"
        app:layout_constraintTop_toTopOf="@id/guideline_h_4"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_4"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_2"
        app:layout_constraintStart_toStartOf="@id/guideline_v_2"
        />

    <TextView
        android:id="@+id/direction_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_9"
        style="@style/CompassTextAppearance"
        app:layout_constraintTop_toTopOf="@id/guideline_h_3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_3"
        app:layout_constraintEnd_toEndOf="@id/guideline_v_1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_1"
        />

    <TextView
        android:id="@+id/direction_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_10"
        style="@style/CompassTextAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        />

    <TextView
        android:id="@+id/direction_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_11"
        style="@style/CompassTextAppearance"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_2"
        app:layout_constraintTop_toTopOf="@id/guideline_h_2"
        app:layout_constraintStart_toStartOf="@id/guideline_v_1"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_1"
        />

    <TextView
        android:id="@+id/direction_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_12"
        style="@style/CompassTextAppearance"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h_1"
        app:layout_constraintTop_toTopOf="@id/guideline_h_1"
        app:layout_constraintStart_toStartOf="@id/guideline_v_2"
        app:layout_constraintEnd_toStartOf="@id/guideline_v_2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>